--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Operating System :: POSIX :: Linux"
 ]
 dependencies = [
-    "numpy<2",
+    "numpy",
     "scipy > 1.4.0",
     "scikit-learn >= 1.0, < 1.7",
     "sparse",
